--- a/css/style.css
+++ b/css/style.css
@@ -323,7 +323,7 @@ footer a{
     margin: 40px 16px;
     text-align: center;
 }
-.error p{
+.error h3{
     text-align: center;
     font-size: 20px;
     font-style: italic;
